--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -169,11 +169,11 @@ p.tagline {
 }
 
 .download-bar a.code {
-  background: transparent url(../images/code.png) no-repeat 0 2px;
-  padding-left: 35px;
+  background: transparent url(../images/code.png) no-repeat right 2px;
+  padding-right: 35px;
   margin-top: 8px;
   display: block;
-  float: left;
+  float: right;
   text-indent: 0;
   width: auto;
   height: auto;
@@ -203,13 +203,13 @@ p.tagline {
 }
 
 .current-section a {
-  float: right;
+  float: left;
   text-indent: -10000px;
   background: transparent url(../images/top.png) no-repeat 0 0;
   width: 20px;
   height: 20px;
   opacity: 0.8;
-  margin-right: 12px;
+  margin-left: 12px;
   margin-top: 12px;
   -moz-opacity: 0.8;
   filter:alpha(opacity=8);
@@ -279,13 +279,13 @@ a.download-button {
   display: inline-block;
   text-indent: 0!important;
   width: auto;
-  float: right;
+  float: left;
   background: #999; /* for non-css3 browsers */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#37ADD4', endColorstr='#1B657E'); /* for IE */
   background: -webkit-gradient(linear, left top, left bottom, from(#37ADD4), to(#1B657E)); /* for webkit browsers */
   background: -moz-linear-gradient(top,  #37ADD4,  #1B657E); /* for firefox 3.6+ */
   height: auto;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 a.download-button span {
@@ -322,9 +322,9 @@ footer .creds small {
 footer .owner .avatar {
   background-color: #666;
   display: block;
-  margin: -19px 10px 0 0;
+  margin: -19px 0 0 10px;
   width: 60px;
-  float: left;
+  float: right;
 }
 
 footer .owner img {
@@ -390,6 +390,7 @@ footer .owner p a {
 }
 
 .markdown-body pre {
+  direction: ltr;
   padding: 10px 70px 10px 0;
   margin-left: -20px;
   margin-right: -20px;
@@ -416,7 +417,7 @@ footer .owner p a {
 
 .markdown-body ul,
 .markdown-body ol {
-  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .markdown-body ul {
@@ -434,7 +435,7 @@ footer .owner p a {
 .markdown-body li pre.lines,
 .markdown-body dd pre,
 .markdown-body dd pre.lines {
-  margin-left: -35px;
+  margin-right: -35px;
 }
 
 .markdown-body dt {
@@ -443,7 +444,7 @@ footer .owner p a {
 }
 
 .markdown-body dd {
-  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .markdown-body table {
@@ -468,8 +469,8 @@ footer .owner p a {
   padding: 5px;
 }
 
-.markdown-body td:first-child,
-.markdown-body th:first-child {
+.markdown-body .prop td:first-child,
+.markdown-body .prop th:first-child {
   width: 30%;
   padding-left: 20px;
 }
@@ -481,7 +482,7 @@ footer .owner p a {
 .markdown-body th {
   font-size: 18px;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   padding: 5px;
 }
 
@@ -498,7 +499,7 @@ footer .owner p a {
   border-top: 3px solid #333;
   border-bottom: 3px solid #333;
   padding: 10px 20px;
-  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .markdown-body blockquote:before {
@@ -506,11 +507,11 @@ footer .owner p a {
   font-family: Georgia, serif;
   font-size: 90px;
   height: 90px;
-  margin-left: -60px;
+  margin-right: -60px;
   margin-top: -25px;
   content: "‟";
   display: block;
-  float: left;
+  float: right;
 }
 
 .markdown-body img {
